--- a/app-pipelines.yaml
+++ b/app-pipelines.yaml
@@ -1,7 +1,10 @@
 runtime: python27
 api_version: 1
 threadsafe: true
-
+automatic_scaling:
+  min_idle_instances: 1
+inbound_services:
+- warmup
 
 handlers:
 
