Adding and committing several removals including removal of mixpanel.

--- a/app.yaml
+++ b/app.yaml
@@ -1,62 +1,73 @@
-application: villagegamedev2
-version: 2
 runtime: python27
 api_version: 1
 threadsafe: true
-secure: always
-
+automatic_scaling:
+  min_idle_instances: 1
+inbound_services:
+- warmup
 
 handlers:
 
-- url: /about
-  static_files: about.htm
-  upload: about.html
-
-- url: /about_files
-  static_dir: about_files
-
-- url: /connect
-  static_files: connect.htm
-  upload: connect.htm
-
-- url: /connect_files
-  static_dir: connect_files
-
 - url: /client/assets
   static_dir: assets
+  secure: always
 
 - url: /assets
   static_dir: assets
+  secure: always
 
-- url: /client/$
+- url: /$
   static_files: client/index_deploy.html
   upload: client/index_deploy.html
+  secure: always
 
-- url: /client/dev$
+- url: /dev$
   static_files: client/index.html
   upload: client/index.html
+  secure: always
+
+- url: /pay
+  static_files: client/pay.html
+  upload: client/pay.html
+  secure: always
 
 - url: /favicon.ico
   static_files: assets/textures/ui/faviconlogo.svg
   upload: assets/textures/ui/faviconlogo.svg
+  secure: always
+  
+- url: /ClientConfig.js
+  static_files: client/ClientConfig.js
+  upload: client/ClientConfig.js
+  secure: always
 
 - url: /js
   static_dir: client/js
+  secure: always
 
-- url: /client/
+- url: /client
   static_dir: client
+  secure: always
+
+- url: /$
+  static_dir: client
+  secure: always
 
 - url: /client/mailchimp/.*
   static_dir: client/mailchimp
+  secure: always
 
 - url: /ige
   static_dir: ige
+  secure: always
 
 - url: /api/.*
   script: village.api.root
+  secure: always
 
 - url: /.*
   script: village.main.root
+  secure: always
 
 libraries:
 - name: pycrypto
