added compress logic

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -33,5 +33,6 @@ pipelines:
             - cd ige
             - node server/ige.js -deploy ../client
             - cd ..
+            - ./compressjs.sh client/js/plugins/log4javascript.js client/js/plugins/howler.js client/js/plugins/usehowler.js client/js/gameClasses/loaders/GameConfig.js client/deploy/gameStart.min.js
             - gcloud auth activate-service-account --key-file client-secret.json
             - gcloud --quiet --verbosity=error app deploy app-pipelines.yaml --version=${APP_VERSION} --promote
