--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,6 +5,8 @@ pipelines:
     master:
       - step:
           script:
+            # flush memcache before deployment
+            - curl https://${CLOUDSDK_CORE_PROJECT}.appspot.com/cache/flush
             # Install Google Cloud SDK
             - export CLOUDSDK_CORE_DISABLE_PROMPTS=1
             # Google Cloud SDK is pinned for build reliability. Bump if the SDK complains about deprecation.
@@ -39,6 +41,8 @@ pipelines:
     development:
       - step:
           script:
+            # flush memcache before deployment
+            - curl https://${CLOUDSDK_CORE_PROJECT_DEVELOPMENT}.appspot.com/cache/flush
             # Install Google Cloud SDK
             - export CLOUDSDK_CORE_DISABLE_PROMPTS=1
             # Google Cloud SDK is pinned for build reliability. Bump if the SDK complains about deprecation.
