changes automatic_scaling settings

--- a/app-pipelines.yaml
+++ b/app-pipelines.yaml
@@ -3,6 +3,8 @@ api_version: 1
 threadsafe: true
 automatic_scaling:
   min_idle_instances: 1
+  max_idle_instances: 1
+  min_pending_latency: 100ms
 inbound_services:
 - warmup
 
