--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -31,7 +31,7 @@ pipelines:
             - pip --quiet install -r requirements.txt -t libs/
             - echo "key = '${GOOGLE_API_KEY}'" > api_key.py
             - echo ${GOOGLE_CLIENT_SECRET} > client-secret.json
-            - python create_config_yaml.py ${CONFIG_DOCID}
+            - python create_config_yaml.py ${CONFIG_DOCID} ${BITBUCKET_COMMIT}
             - cd ige
             - node server/ige.js -deploy ../client
             - cd ..
@@ -67,7 +67,7 @@ pipelines:
             - pip --quiet install -r requirements.txt -t libs/
             - echo "key = '${GOOGLE_API_KEY_DEVELOPMENT}'" > api_key.py
             - echo ${GOOGLE_CLIENT_SECRET_DEVELOPMENT} > client-secret.json
-            - python create_config_yaml.py ${CONFIG_DOCID_DEVELOPMENT}
+            - python create_config_yaml.py ${CONFIG_DOCID_DEVELOPMENT} ${BITBUCKET_COMMIT}
             - cd ige
             - node server/ige.js -deploy ../client
             - cd ..
