--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
-Flask==0.10.1
-Jinja2==2.7.3
-MarkupSafe==0.23
-PyJWT==0.2.1
-Werkzeug==0.9.6
-argparse==1.2.1
-bottle==0.12.7
-braintree==3.10.0
-elpy==1.4.0
-flake8==2.2.3
-gspread==0.2.5
-itsdangerous==0.24
-jedi==0.8.1-final0
-mccabe==0.2.1
-pep8==1.5.7
-pyflakes==0.8.1
-requests==2.3.0
-rope==0.10.2
-wsgiref==0.1.2
-oauth2client==1.5.2
-pycrypto==2.6.1
-httplib2==0.9.2
-google-api-python-client==1.4.2
-GoogleAppEngineCloudStorageClient==1.9.22.1
+Flask>=1.0.2
+Jinja2>=2.7.3
+MarkupSafe>=0.23
+PyJWT>=0.2.1
+Werkzeug>=0.9.6
+argparse>=1.2.1
+bottle>=0.12.7
+braintree>=3.10.0
+elpy>=1.4.0
+flake8>=2.2.3
+gspread>=0.2.5
+itsdangerous>=0.24
+jedi>=0.8.1
+mccabe>=0.2.1
+pep8>=1.5.7
+pyflakes>=0.8.1
+requests>=2.20.0
+requests_toolbelt>=0.8.0
+rope>=0.11.0
+wsgiref>=0.1.2
+httplib2>=0.9.2
+oauth2client>=4.1.2
+google-api-python-client>=1.4.2
+cloudstorage>=0.9.0
+ssl>=1.16
 ftfy < 5
