deleted unneeded html

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,7 @@
 .DS_Store
 *.meta
 update_prod.sh
+villagegamedev-7ef4100fcad6.json
+villagethegame111-7c4fefc51ff2.json
 villagegamedev2_deploy.sh
 ige-*-merge
